# prowlarr-telegram-client

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml  transmission-docker-build.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-automerge.yml  docker-build.yml  transmission-docker-build.yml
locales/: app.yml  en.json  ru.json
src/: downloads_tracker.rs  in_memory_uuid_mapper.rs  main.rs  message_handling.rs  prowlarr.rs  torrent_data.rs  util.rs  uuid_mapper.rs  web_server.rs
src/completion/: web.rs
src/core/: completion.rs  downloads_tracker.rs  input_handler.rs  mod.rs  permissions.rs  prowlarr.rs  torrent_meta.rs  util.rs
src/core/ext/: downloader.rs  error.rs  input.rs  link_provider.rs  mod.rs  search_response.rs  searcher.rs  sender.rs  uuid_mapper.rs
src/core/traits/: input.rs  mod.rs  search_result_serializer.rs  sender.rs  uuid_mapper.rs
src/ext/: mod.rs
src/ext/completion/: web.rs
src/ext/input_handler/: telegram.rs
src/ext/search_result_serializer/: telegram.rs
src/ext/sender/: telegram.rs
src/ext/uuid_mapper/: in_memory.rs  mod.rs  redis.rs
src/telegram/: dispatcher.rs  message_handler.rs  mod.rs  search_result.rs  tg_input.rs  tg_search_response_formatter.rs  tg_sender.rs
src/torrent/: download_meta.rs  mod.rs  torrent_meta.rs  util.rs
src/uuid_mapper/: in_memory.rs  mod.rs  redis.rs
transmission/: Dockerfile
transmission/root/etc/s6-overlay/s6-rc.d/init-mod-universal-prowlarr-tg-client/: run  up
