[package]
name = "prowlarr-telegram-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"
authors = ["Kirill Fertikov"]
repository = "https://github.com/fertkir/prowlarr-telegram-client"
keywords = ["torrents", "telegram-bot", "prowlarr"]

[features]
default = []
redis-storage = ["redis", "serde_json"]

[dependencies]
teloxide = { version = "0.13.0", features = ["webhooks", "webhooks-axum"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.25"
env_logger = "0.11.6"
rust-i18n = "3.1.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
byte-unit = "5.1.6"
dashmap = "6.1.0"
rand = "0.8.5"
bytes = "1.9.0"
url = "2.5.4"
warp = "0.3.7"
hightorrent = "0.2.0"
derive_more = { version = "1.0.0", features = ["display"] }
async-trait = "0.1.85"
redis = { version = "0.25.4", features = ["tokio-comp"], optional = true }
serde_json = { version = "1.0.137", features = [], optional = true }
thiserror = "2.0.11"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.10.1"
wiremock = "0.6.2"
mockall = "0.13.1"
