[package]
name = "prowlarr-telegram-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"
authors = ["Kirill Fertikov"]
repository = "https://github.com/fertkir/prowlarr-telegram-client"
keywords = ["torrents", "telegram-bot", "prowlarr"]

[features]
default = []
redis-storage = ["redis", "serde_json"]

[dependencies]
teloxide = { version = "0.17.0", features = ["webhooks", "webhooks-axum"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
log = "0.4.28"
env_logger = "0.11.8"
rust-i18n = "3.1.5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]  }
serde = "1.0.219"
chrono = { version = "0.4.42", features = ["serde"] }
byte-unit = "5.1.6"
dashmap = "6.1.0"
rand = "0.9.2"
bytes = "1.10.1"
url = "2.5.7"
warp = { version = "0.4.2", features = ["server"] }
hightorrent = "0.3.2"
derive_more = { version = "2.0.1", features = ["display"] }
async-trait = "0.1.89"
redis = { version = "0.32.5", features = ["tokio-comp"], optional = true }
serde_json = { version = "1.0.143", features = [], optional = true }
thiserror = "2.0.16"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.21.0"
wiremock = "0.6.5"
mockall = "0.13.1"
