[package]
name = "prowlarr-telegram-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"
authors = ["Kirill Fertikov"]
repository = "https://github.com/fertkir/prowlarr-telegram-client"
keywords = ["torrents", "telegram-bot", "prowlarr"]

[features]
default = []
redis-storage = ["redis", "serde_json"]

[dependencies]
teloxide = { version = "0.17.0", features = ["webhooks", "webhooks-axum"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.29"
env_logger = "0.11.8"
rust-i18n = "3.1.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"]  }
serde = "1.0.228"
chrono = { version = "0.4.42", features = ["serde"] }
byte-unit = "5.2.0"
dashmap = "6.1.0"
rand = "0.9.2"
bytes = "1.11.0"
url = "2.5.7"
warp = { version = "0.4.2", features = ["server"] }
hightorrent = "0.4.0"
derive_more = { version = "2.1.1", features = ["display"] }
async-trait = "0.1.89"
redis = { version = "0.32.7", features = ["tokio-comp"], optional = true }
serde_json = { version = "1.0.146", features = [], optional = true }
thiserror = "2.0.17"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.23.0"
wiremock = "0.6.5"
mockall = "0.14.0"
